--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                 <script>
                     var CurrentYear = new Date().getFullYear()
                     document.write(CurrentYear)
-                </script>&nbspVavada-kz.com. All right reserved.
+                </script> Vavada-kz.com. All right reserved.
             </div>
         </div>
     </footer>
