--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <h1>Вавада Казино Казахстан</h1>
 <p>Приглашаем вас окунуться в захватывающий мир онлайн-казино и насладиться обширной коллекцией первоклассных игровых автоматов, доступных в любое удобное для вас время. Просто выберите надежное и лицензированное онлайн-казино, сотрудничающее с ведущими мировыми провайдерами игр. Вас ждет не только разнообразие увлекательных слотов, но и возможность испытать удачу в классических карточных играх, а также погрузиться в атмосферу настоящего казино с живыми дилерами за столами рулетки.</p>
 
-<p>Рекомендуем обратить особое внимание на онлайн казино Vavada, успешно зарекомендовавшее себя на рынке с 2016 года. Казино постоянно развивается и совершенствуется, предлагая игрокам современный и стильный интерфейс, который придется по вкусу даже самым требовательным пользователям. Вавада действует в строгом соответствии с законодательством Казахстана, гарантируя своим клиентам безопасную и честную игру.</p>
+<p>Рекомендуем обратить особое внимание на онлайн казино Vavada, успешно зарекомендовавшее себя на рынке с 2016 года. Наше казино постоянно развивается и совершенствуется, предлагая игрокам современный и стильный интерфейс, который придется по вкусу даже самым требовательным пользователям. Вавада действует в строгом соответствии с законодательством Казахстана, гарантируя своим клиентам безопасную и честную игру.</p>
 
 <p>Напоминаем, что участие в играх на реальные деньги разрешено только совершеннолетним лицам. Для большинства слотов предусмотрена бесплатная демо-версия, позволяющая ознакомиться с правилами и игровым процессом без финансового риска.</p></div></div></div>
 	<div class="slots">
