--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="index, follow, noarchive" name="robots">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Vavada Casino Online | Zaloguj się w Vavada Kasyno i Odbierz Bonus</title>
+    <title>Вавада Казино Казахстан ✔️ Официальный сайт казино Вавада</title>
     <meta name="robots" content="max-image-preview:large">
-    <meta name="description" content="Vavada Online Kasyno w Polsce 2024 ⚡️ Odbierz 3600 PLN + 100 FS Bonusu Powitalnego w Vavada Casino ⭐️ Zarejestruj Konto w Casino Vavada ☝️">
+    <meta name="description" content="Официальная страница онлайн казино Вавада ⭕ Вход и Регистрация на Vavada ⚡️ Получи бонус до $1000 + 100 фриспинов ✔️ Вавада KZ.">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <link rel="stylesheet" id="normalize-style-css" href="css/normalize.css" type="text/css" media="all">
     <link rel="stylesheet" id="owl-style-css" href="css/owl.carousel.min.css" type="text/css" media="all">
@@ -14,8 +14,9 @@
     <link rel="alternate" hreflang="ru_RU" href="https://vavada-kz.com/">
     <link rel="alternate" hreflang="x-default" href="https://vavada-kz.com/">
     <link href="https://vavada-kz.com/" rel="canonical">
+    <meta property="og:title" content="Вавада KZ">
     <meta name="google-site-verification" content="UYCBal_ihoHB0kL0EjuzjfhWmYmirJFvZDyt9xCxNys">
-	<script type="application/ld+json">
+    <script type="application/ld+json">
 {
   "@context": "http://www.schema.org",
   "@type": "BreadcrumbList",
@@ -26,15 +27,15 @@
       {
        "@type":"WebPage",
        "@id": "/",
-       "name": "Vavada Casino"
+       "name": "Вавада Казино"
       }
      },
      {
      "@type":"ListItem", "position":2, "item":
       {
        "@type":"WebPage",
-       "@id": "/#logowanie",
-       "name": "🎁 $1000 + 150 FS 🎉"
+       "@id": "/#регистрация",
+       "name": "🎉 $1000 + 150 FS 🎉"
       }
      }
    ]
