--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" id="owl-style-css" href="css/owl.carousel.min.css" type="text/css" media="all">
     <link rel="stylesheet" id="main-style-css" href="css/main.css" type="text/css" media="all">
     <link rel="stylesheet" id="media-style-css" href="css/media.css" type="text/css" media="all">
-    <link rel="alternate" hreflang="ru_RU" href="https://vavada-kz.com/">
-    <link rel="alternate" hreflang="x-default" href="https://vavada-kz.com/">
-    <link href="https://vavada-kz.com/" rel="canonical">
+    <link rel="alternate" hreflang="ru_RU" href="https://vavada-kz.org/">
+    <link rel="alternate" hreflang="x-default" href="https://vavada-kz.org/">
+    <link href="https://vavada-kz.org/" rel="canonical">
     <meta property="og:title" content="Вавада KZ">
     <meta name="google-site-verification" content="UYCBal_ihoHB0kL0EjuzjfhWmYmirJFvZDyt9xCxNys">
     <script type="application/ld+json">
@@ -774,14 +774,14 @@
                 </ul>
             </div>
             <div class="copyright">
-		Vavada-kz.com is owned and operated by Vavada B.V.
+		vavada-kz.org is owned and operated by Vavada B.V.
                 <br><br> Азартные игры должны приносить удовольствие. Пожалуйста, помните, что делать ставки - значит рисковать реальными деньгами. Не стоит тратить больше, чем вы можете позволить себе потерять.
                 <br><br>
                 2021 - 
                 <script>
                     var CurrentYear = new Date().getFullYear()
                     document.write(CurrentYear)
-                </script> Vavada-kz.com. All right reserved.
+                </script> vavada-kz.org. All right reserved.
             </div>
         </div>
     </footer>
